<resources>
    <string name="app_name">สัตว์ป่าสงวน</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_score">ShowScoreActivity</string>
    <string name="title_know">ทรัพยากรสัตว์ป่า</string>
    <string name="contentv3">คุณค่าของสัตว์ป่า</string>
    <string name="contentv4"> สัตว์ป่าอำนวยประโยชน์นานาประการให้แก่มนุษย์และทรัพยากรธรรมชาติอื่น ๆ มากมาย อย่างไรก็ตามประโยชน์ส่วนใหญ่เป็นไปในทางอ้อมมากกว่าทางตรงจึงทำให้มองไม่ค่อยเห็นคุณค่าของสัตว์ป่าเท่าที่ควร เมื่อเทียบกับทรัพยากรธรรมชาติอื่น ๆ เช่น ป่าไม้ น้ำ และแร่ธาตุ เป็นต้น ตัวอย่างคุณค่าของสัตว์ป่า เป็นต้นว่า
1. ด้านเศรษฐกิจ ประโยชน์ด้านเศรษฐกิจที่มนุษย์ได้จากสัตว์ป่าก็ได้แก่การค้าสัตว์ป่า หรือซากของสัตว์ป่าโดยเฉพาะหนังสือป่าในปีหนึ่ง ๆ ทำรายได้ให้กับประเทศและมีเงินหมุนเวียนภายในประเทศจำนวนไม่น้อย คุณค่าทางด้านเศรษฐกิจจะรวมถึงรายได้ต่าง ๆ จากการท่องเที่ยวในการชมสัตว์ด้วย
2. การเป็นอาหาร มนุษย์ได้ใช้เนื้อของสัตว์ป่าเป็นอาหารเป็นเวลาช้านานแล้ว ซึ่งสัตว์ป่าหลายชนิดก็ได้พัฒนาจนกระทั่งกลายเป็นเลี้ยงไป สัตว์ป่าหลายชนิดตามธรรมชาติคนก็ยังนิยมใช้เนื้อเป็นอาหารอยู่ เช่น หมูป่า เก้ง กวาง กระจง กระทิง นกเขาเปล้า นกเป็ดน้ำ ตะกวด แย้ เป็นต้น อวัยวะของสัตว์ป่าบางอย่าง เช่น นอแรด กระโหลก เลียงผา เขากวางอ่อน เลือดและกระเพาะค่าง ดีของหมี ดีงูเห่า ก็ยังมีผู้นิยมดัดแปลงเป็นอาหาร หรือใช้เป็นเครื่องยาสมุนไพรอีกด้วย
</string>
    <string name="contentv5">หมูป่า</string>
    <string name="contentv6">ตะกวด</string>
    <string name="contentv7">3. เครื่องใช้เครื่องประดับ นอกจากเนื้อของสัตว์ป่าและส่วนต่าง ๆ ของสัตว์ป่าจะใช้เป็นอาหารและยาแล้ว อวัยวะบางอย่างของสัตว์ป่าก็ยังใช้ประโยชน์ต่าง ๆ ได้อีกมากมาย เช่น หนังใช้ทำกระเป๋า รองเท้า เครื่องนุ่งห่ม งาช้าง ใช้เป็นเครื่องประดับ กระดูก เขาสัตว์ใช้ทำด้ามมีดด้ามเครื่องมือ หรือแกะสลักต่าง ๆ เป็นต้น
4. การนันทนาการและด้านจิตใจ นับเป็นคุณค่าอันยิ่งใหญ่ของสัตว์ป่า แต่ไม่สามารถประเมินเป็นตัวเงินได้โดยง่าย การท่องเที่ยวชมสัตว์ป่าในสวนสัตว์ อุทยานแห่งชาติ เขตรักษาพันธุ์สัตว์ป่าและแหล่งสัตว์ป่าอื่น ๆ นับเป็นเรื่องนันทนาการทั้งสิ้นเช่นเดียวกับการสงสารสัตว์ป่าที่ถูกทรมาน กักขัง หรืออื่นใดก็ตามที สัตว์อยู่อย่างไม่ผาสุกก็เป็นเรื่องจิตใจ รวมตลอดทั้งการท่องเที่ยวป่าเห็นสัตว์ป่าหรือไม่เห็นสัตว์ป่า ซึ่งควรประดับความงามตามธรรมชาติเป็นทั้งนันทนาการและด้านจิตใจทั้งสิ้น
5. ด้านวิทยาศาสตร์ การศึกษา และการแพทย์ สัตว์ป่านับมีคุณค่าใหญ่หลวงที่ทำให้นักวิทยาศาสตร์ นักการศึกษาและแพทย์ ประสบผลสำเร็จในด้านการค้นคว้าทดลองต่าง ๆ โดยขั้นแรกเขาทดลองกับสัตว์ป่าเสียก่อน เช่น ทดลองกับหนู กระแต ลิง จากนั้นจึงนำไปใช้กับคนการค้นคว้า ทดลองเหล่านี้หากไม่มีสัตว์ป่าเป็นเครื่องทดลองก่อนแล้ว ก็อาจจะมีผลสะท้อนถึงคนอย่างมาก
6. เป็นตัวควบคุมสิ่งมีชีวิตอื่น ๆ สัตว์ป่านับได้ว่าเป็นตัวควบคุมสิ่งมีชีวิตอื่น ๆ โดยเฉพาะอย่างยิ่งสัตว์ด้วยกันเอง ทำให้ผลกระทบต่อคนบรรเทาเบาบางลงไปไม่มากก็น้อย เช่น ค้างคาวกินแมลง นกฮูกและงูสิงกินหนูต่าง ๆ นกกินตัวหนอนที่ทำลายพืชเศรษฐกิจ เป็นต้น ซึ่งหากไม่มีสัตว์ป่าต่าง ๆ ดังกล่าวแล้วคนอาจจะต้องเสียเงินทองจำนวนมากกว่าเป็นอยู่ในปัจจุบันที่จะต้องกำจัดศัตรูทั้งทางตรงและทางอ้อมเหล่านี้
7. คุณค่าของสัตว์ป่าต่อทรัพยากรธรรมชาติอื่น ๆ คนส่วนใหญ่มองเห็นความสัมพันธ์ระหว่างทรัพยากรธรรมชาติต่าง ๆ อย่างชัดเจน โดยเฉพาะทรัพยากรป่าไม้ เป็นต้นว่า ป่าไม้ทำให้สัตว์ป่ามีที่อยู่อาศัย เป็นอาหาร และเป็นที่หลบภัย ป่าไม้ทำให้ดินอุดมสมบูรณ์ ป้องกันการกัดเซาะของน้ำ ลม ป่าไม้ช่วยทำให้มีน้ำไหลตลอดปี น้ำใสสะอาดปราศจากตะกอน ป่าไม้ช่วยทำให้ฝนตก บรรเทากระแสลมพายุ ป่าไม้ทำให้อากาศไม่ร้อนไม่หนาว ป่าไม้เป็นแหล่งสะสมแร่ธาตุและป่าไม้ทำให้มนุษย์ได้ใช้สอย ขาดป่าไม้ทรัพยากรธรรมชาติอื่น ๆ ก็อยู่ไม่ได้ ทำนองเดียวกันกับทรัพยากรธรรมชาติอื่น ๆ ที่คนจะมองเห็นความสัมพันธ์ซึ่งกันและกัน ทั้งนี้ยกเว้นสัตว์ป่ามักจะมองเห็นเฉพาะต้องอาศัยทรัพยากรธรรมชาติอื่น ๆ เท่านั้น แต่ในข้อเท็จจริงแล้ว สัตว์ป่าก็มีผลต่อทรัพยากรธรรมชาติอื่น ๆ ไม่น้อยเช่นเดียวกัน อย่างเช่นทรัพยากรป่าไม้ สัตว์ป่า ก็มีส่วนช่วยหลายอย่าง เช่น
   7.1 สัตว์ป่าช่วยทำลายศัตรูป่าไม้ ต้นไม้ในป่าจะมีศัตรูตามธรรมชาติเสมอ ๆ เช่น โรคและแมลง เป็นต้น แต่ศัตรูเหล่านี้จะไม่ระบาด โดยเฉพาะแมลงหากมีตัวทำลายสัตว์ป่าหลายชนิดเป็นตัวกำจัดแมลงนอกจากที่กล่าวไปแล้วก็มี เช่น นกหัวขวาน นกไต่ไม้ จะกินแมลงและตัวหนอน ตามลำต้น นกกินแมลง นกจับแมลง จะกินแมลงที่มาทำลายใบ ดอก และผล ตุ่น หนูผี จะกินหนอนที่มากินรากและลำต้นใต้ดิน หากปราศจากสัตว์เหล่านี้แล้วต้นไม้จะได้รับความเสียหายและอาจจะตายในที่สุด
   7.2 สัตว์ป่าช่วยผสมเกสรดอกไม้ ต้นไม้ผสมเกสรได้นั้นอาศัยปัจจัยหลายอย่างช่วย เช่น ลม และแมลงสำหรับสัตว์ป่าบางชนิดก็เป็นตัวที่ช่วยผสมเกสรด้วย เช่น นกกินปลี นกปลีกล้วย และค้างคาวกินน้ำหวานดอกไม้ เป็นต้น สัตว์ป่าเหล่านี้จะช่วยผสมเกสรดอกไม้ในขณะที่กินน้ำหวานดอกไม้จากดอกหนึ่งไปยังอีกดอกหนึ่งหรือจากต้นหนึ่งไปยังอีกต้นหนึ่ง ทำนองเดียวกับลมและแมลงดังกล่าวแล้ว
   7.3 สัตว์ป่าช่วยในการกระจายเมล็ดพันธุ์ไม้ สัตว์ป่าบางชนิด เช่น นกขุนทอง นกเงือก ค้างคาวบางชนิด ลิง ค่าง ชะนี กวาง เก้ง กระทิง วัวแดง เป็นต้น จะกินผลไม้เป็นอาหาร แล้วคายหรือถ่ายเมล็ดออกมาตามที่ต่าง ๆ เมล็ดไม้บางชนิดไม่ได้รับความเสียหายใด ๆ ในการผ่านกระเพาะของสัตว์เหล่านี้ก็เท่ากับสัตว์ป่าช่วยในการกระจายเมล็ดพันธุ์ไม้ไปในที่ต่าง ๆ ที่สัตว์ท่องเที่ยวไปแล้วคายหรือถ่ายเมล็ดไม้ออกมา
   7.4 สัตว์ป่าช่วยทำให้ดินอุดมสมบูรณ์ยิ่งขึ้น มูลของสัตว์เกือบทุกชนิดใช้เป็นปุ๋ยได้อย่างดี เท่ากับเพิ่มความอุดมสมบูรณ์ให้กับดิน ในขณะเดียวกันเมื่อสัตว์ป่าตายลง ซากของสัตว์ป่าก็จะกลายเป็นปุ๋ยได้เช่นเดียวกัน ทุกวันนี้เกิดปัญหาการดัดแปลงมูลของสัตว์ป่าบางชนิด เช่น มูลของค้างคาว ซึ่งมีอยู่มากมายตามถ้ำต่าง ๆ ให้ใช้อย่างถูกต้อง ก็จะทำให้แก้ปัญหาต่าง ๆ ได้ ทุกวันนี้แม้ว่าจะใช้มูลค้างคาวเป็นปุ๋ยอยู่บ้าง ก็อยู่เฉพาะในวงจำกัด ในปัจจุบันวงการป่าไม้เองก็ต้องใช้ปุ๋ยในสวนป่าเหมือนกันทั้งนี้เนื่องจากการทำงานสัตว์ป่าออกไปเกือบหมดป่านั่นเอง
</string>
    <string name="contentv8">วัวแดง</string>
    <string name="contentv9">ปัญหาทรัพยากรสัตว์ป่า</string>
    <string name="contentv10">ในปัจจุบันสัตว์ป่ามีจำนวนลดน้อยลงมาก ชนิดที่สมัยก่อนมีอยู่ชุกชุมก็ไม่ค่อยได้พบเห็นอีกบางชนิดก็ถึงกับสูญพันธุ์ไปเลย ปัญหานี้สาเหตุมาจาก
1. ถูกทำลายโดยการล่าโดยตรงไม่ว่าจะล่าเพื่ออาหารหรือเพื่อการกีฬาหรือเพื่ออาชีพ
2. การสูญพันธุ์หรือลดน้อยลงไปตามธรรมชาติของสัตว์ป่าเอง ถ้าหากไม่สามารถปรับตัวให้เข้ากับความเปลี่ยนของสภาพแวดล้อมได้ หรือจากสาเหตุภัยธรรมชาติต่าง ๆ เช่น น้ำท่วม ไฟป่า
3. การนำสัตว์ป่าต่างถิ่น (Exotic aminal) เข้าไปในระบบนิเวศสัตว์ป่าประจำถิ่น ทำให้เกิดผลกระทบต่อระบบนิเวศ ความสมดุลของสัตว์ป่าประจำถิ่นจนอาจเกิดการสูญพันธุ์
4. การทำลายถิ่นที่อยู่อาศัยของสัตว์ป่า ซึ่งก็ได้แก่การที่ป่าไม้ถูกทำลายด้วยวิธีการต่าง ๆ ไม่ว่าจะโดยถากถางและเผาเพื่อทำการเกษตรกิจกรรมการพัฒนา เช่น การตัดถนนผ่านเขตป่า การสร้างเขื่อน ฯลฯ ทำให้สัตว์ป่าบางส่วนต้องอพยพไปอยู่ที่อื่นหรือไม่ก็เสียชีวิตขณะที่ถิ่นที่อยู่อาศัยถูกทำลาย
5. การสูญเสียเนื่องจากสารพิษตกค้าง เมื่อเกษตรกรใช้สารเคมีในการเพาะปลูก เช่น ยาปราบศัตรูพืชจะทำให้เกิดการสะสมพิษในร่างกายทำให้บางชนิดถึงกับสูญพันธุ์ได้
การอนุรักษ์สัตว์ป่า
สัตว์ป่ามีประโยชน์ต่อสิ่งแวดล้อมซึ่งรวมถึงคนเราด้วยทั้งโดยทางตรงและทางอ้อม จึงต้องมีวิธีการป้องกันและแก้ไขไม่ให้สัตว์ป่าลดจำนวนหรือสูญพันธุ์ด้วยการอนุรักษ์สัตว์ป่า ดังนี้
1. กำหนดกฎหมายและวิธีการปฏิบัติอย่างเคร่งครัด เพื่อให้ป่าเป็นแหล่งอาหารที่อยู่อาศัยของสัตว์ป่า อาทิ เขตรักษาพันธุ์สัตว์ป่า เขตห้ามล่าสัตว์ป่า เขตเพาะพันธุ์สัตว์ป่า ฯลฯ ให้มีมากเพียงพอ
2. การรณรงค์เผยแพร่ประชาสัมพันธ์ ให้เห็นความสำคัญในการอนุรักษ์สัตว์ป่าอย่างจริงจัง
3. การไม่ล่าสัตว์ป่า ไม่ควรมีการล่าสัตว์ป่าทุกชนิด ทั้งสัตว์ป่าสงวนสัตว์ป่าคุ้มครองเพราะปัจจุบันสัตว์ป่าทุกชนิดได้ลดจำนวนลงอย่างมากทำให้ขาดความสมดุลทางธรรมชาติ
4. การป้องกันไฟป่า ไฟป่านอกจากจะทำให้ป่าไม้ถูกทำลายแล้วยังเป็นการทำลายแหล่งอาหารและที่อยู่อาศัยของสัตว์ป่าด้วย
5. การปลูกฝังการให้ความรัก และเมตตาต่อสัตว์อย่างถูกวิธีสัตว์ป่าทุกชนิดมีความรักชีวิตเหมือนกับมนุษย์ การฆ่าสัตว์ป่า การนำสัตว์ป่ามาเลี้ยงไว้ในบ้านเป็นการทรมานสัตว์ป่า ซึ่งมักไม่มีชีวิตรอด
6. การเพาะพันธุ์เพิ่มสัตว์ป่าที่กำลังจะสูญพันธุ์หรือมีจำนวนน้อยลง ควรมีการเพาะพันธุ์ขยายพันธุ์ให้มีจำนวนเพิ่มขึ้น เพื่อเป็นการทดแทนและเร่งให้มีสัตว์ป่าเพิ่มมากขึ้น
</string>
    <string name="animala">สัตว์ป่าสงวน</string>
    <string name="animail1">สัตว์ป่าสงวน เป็นสัตว์ป่าที่หายากและปัจจุบันมีจำนวนน้อยมากบางชนิดสูญพันธุ์ไปแล้วมีอยู่ 15 ชนิด คือ นกเจ้าฟ้าหญิงสิรินธร แรด กระซู่ กูปรีหรือโคไพร ควายป่า ละองหรือละมั่ง สมันหรือ เนื้อสมัน เลียงผา นกแต้วแล้วท้องดำ นกกระเรียน แมวลายหินอ่อน สมเสร็จ เก้งหม้อและพะยูนหรือหมูน้ำ</string>
    <string name="animalb">สัตว์ป่าคุ้มครอง</string>
    <string name="animal2">สัตว์ป่าคุ้มครอง เป็นสัตว์ทั้งที่ปกติไม่นิยมใช้เป็นอาหารและใช้เป็นอาหารทั้งที่ไม่ใช่ล่าเพื่อการกีฬาและล่าเพื่อการกีฬา ตามที่กฎกระทรวงเกษตรและสหกรณ์กำหนดไว้ มากกว่า 200 ชนิด เช่น ค่าง ชะนี อีเห็น ไก่ฟ้า เหยี่ยว ช้างป่า แร้ง กระทิง กวาง หมีควาย อีเก้ง นกเป็ดน้ำ เป็นต้น</string>
</resources>